# beeeees

./: .gitignore  Cargo.toml  README.md  protocol.md
clients/: README.md  beeees.py  eg_nearest.py  eg_random.py
src/: main.rs  server.rs
src/game/: entity.rs  mod.rs  world.rs
src/server/: mod.rs  protocol.rs
website/: index.html  main.js
