[package]
name = "beeeees"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
global_counter = "0.2.2"
anyhow = "1.0"

tokio = { version = "1.8", features = ["full"] }
libmdns = "0.6"
env_logger = "0.8"