[package]
name = "beeeees"
version = "0.1.0"
edition = "2018"
default-run = "beeeees"

[dependencies]
anyhow = "1.0"
global_counter = "0.2.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"